--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <%= select_tag :person_type, options_for_select(["Actor's","Director's","Title"]), required: :true, class: "height-20"%>
         <%= select_tag :search_type, options_for_select(["Best","Worst"]), required: :true, class: "height-20"%>
         <%= text_field_tag :search, '', size: 75%>
-        <%= submit_tag "Search", class: "btn-20 heigh-20 anodina-light"%>
+        <%= submit_tag "Search", class: "btn-20 heigh-20"%>
       <% end %>
 
     </div>
