--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -133,7 +133,7 @@ body{
 
 .next_button {
   background-color: black;
-  color:white;
+  color:rgb(131, 123, 123);
   font-weight: bold;
   height: 30px;
   width: 120px;
