--- a/app/views/dbless_search/index.html.erb
+++ b/app/views/dbless_search/index.html.erb
@@ -6,7 +6,7 @@
     <% else %>
       <h1> Movie Titles featuring '<%= @data[:search].titleize %>'</h1>
     <% end %>
-    <% @data[:movies][0..50].each do |movie| %>
+    <% @data[:movies][0..50].each_with_index do |movie, i| %>
     <div class="padded">
       <div class="grid-3">
         <div class="">
@@ -22,6 +22,13 @@
 
         </div>
         <div class="">
+              <h2> <%= button_to movie[:title], movies_path(movie), method: :post, id: "movie-#{i}" %>(
+              <% if movie[:year]%>
+              <%=movie[:year][0..3] %> 
+              <% end %>
+              <% if movie[:rated] %>
+              <%=movie[:rated] %>)
+              <% end %></h2>
             
             <h2><%=movie[:title] %> (
               <% if movie[:year]%>
