functional, working on allignment

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -183,12 +183,29 @@ body{
   position:fixed;
   z-index: +1
  }
+.movie_link {
+  border: none;
+  text-decoration: underline;
+  color: goldenrod;
+  background-color: transparent;
+  font-size: 40px;
+  font-weight: bold;
+  font-style: italic;
+  cursor: pointer;
+}
+.movie_link:hover {
+  color: teal;
+}
+.movie_header {
+  display:inline-block;
+}
 .content {
   position:relative;
   top: 50px;
   /* overflow:hidden; */
   overflow: scroll;
   height: 90vh;
+  font-family: "arial"
 }
 .ital {
   font-style: italic;
