--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -183,21 +183,29 @@ body{
   position:fixed;
   z-index: +1
  }
-.movie_link {
+.movie-link {
   border: none;
   text-decoration: underline;
   color: goldenrod;
   background-color: transparent;
-  font-size: 40px;
+  font-size: 30px;
   font-weight: bold;
   font-style: italic;
   cursor: pointer;
 }
-.movie_link:hover {
+.movie-link:hover {
   color: teal;
 }
-.movie_header {
-  display:inline-block;
+.trailer {
+  margin-top: 55px;
+}
+.movie-header {
+  /* float: left; */
+}
+.inline {
+  display: inline;
+  position: relative;3
+  float: left;
 }
 .content {
   position:relative;
