--- a/app/views/splash/index.html.erb
+++ b/app/views/splash/index.html.erb
@@ -1,7 +1,7 @@
 <div class="content">
   <div class="indent">
 
-    <h1 class="BlockLetter"><span class="huge shadow">REELY </span><span class="med_text yellow">.  Find your next film</span></h1> 
+    <h1 class="BlockLetter"><span class="huge shadow">REELY </span><span class="med_text yellow">  Find your next film</span></h1> 
     <div class="white credits">
       <h2>Search for an actors or directors best... or worst movies</h2>
       <div class="">
